--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,19 +32,22 @@
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:background="@color/black"
+            android:onClick="paintClicked"
             android:scaleType="fitXY"
             android:src="@drawable/pallet_normal"
             android:tag="@color/black"
-            android:onClick="paintClicked" />
+            tools:ignore="UsingOnClickInXml" />
 
         <ImageButton
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:background="@color/skin"
+            android:onClick="paintClicked"
             android:scaleType="fitXY"
             android:src="@drawable/pallet_normal"
-            android:tag="@color/skin" />
+            android:tag="@color/skin"
+            tools:ignore="UsingOnClickInXml" />
 
 
         <ImageButton
@@ -52,55 +55,66 @@
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:background="@color/red"
+            android:onClick="paintClicked"
             android:scaleType="fitXY"
             android:src="@drawable/pallet_normal"
-            android:tag="@color/red" />
+            android:tag="@color/red"
+            tools:ignore="UsingOnClickInXml" />
 
         <ImageButton
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:background="@color/green"
+            android:onClick="paintClicked"
             android:scaleType="fitXY"
             android:src="@drawable/pallet_normal"
-            android:tag="@color/green" />
+            android:tag="@color/green"
+            tools:ignore="UsingOnClickInXml" />
 
         <ImageButton
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:background="@color/blue"
+            android:onClick="paintClicked"
             android:scaleType="fitXY"
             android:src="@drawable/pallet_normal"
-            android:tag="@color/blue" />
+            android:tag="@color/blue"
+            tools:ignore="UsingOnClickInXml" />
 
         <ImageButton
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:background="@color/yellow"
+            android:onClick="paintClicked"
             android:scaleType="fitXY"
             android:src="@drawable/pallet_normal"
-            android:tag="@color/yellow" />
+            android:tag="@color/yellow"
+            tools:ignore="UsingOnClickInXml" />
 
         <ImageButton
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:background="@color/lollipop"
+            android:onClick="paintClicked"
             android:scaleType="fitXY"
             android:src="@drawable/pallet_normal"
-            android:tag="@color/lollipop" />
+            android:tag="@color/lollipop"
+            tools:ignore="UsingOnClickInXml" />
 
         <ImageButton
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:background="@color/random"
+            android:onClick="paintClicked"
             android:scaleType="fitXY"
             android:src="@drawable/pallet_normal"
-            android:tag="@color/random" />
-
+            android:tag="@color/random"
+            tools:ignore="UsingOnClickInXml" />
     </LinearLayout>
 
     <ImageButton
